Change history
--------------

Release Candidate 1
===================

- Changed SmartDispatcherController.BuildMethodArguments. Now it tests if the conversion 
  succeeded before setting the value on the array.

- Introduced IWizardPageFactory on WindsorExtension, so a Wizard controller doesn't
  need to reference the IKernel directly

- Some optimization on Redirect* methods on Controller class. Now they accept
  an IDictionary as a parameter specifier (in addition to NameValueCollection).
  
- Refactored ControllerDescriptorBuilder (renamed to ControllerDescriptorProvider)
  to use child providers to obtain descriptor. Attributes are now descriptors builders
  and that allows one to come up with custom attributes like

  public class MyAttribute : Attribute, ILayoutDescriptorBuilder, IHelperDescriptorBuilder
  {
     public LayoutDescriptor BuildLayoutDescriptor() 
     {
       return new LayoutDescriptor("mylayout");
     }

     public HelperDescriptor[] BuildHelperDescriptors()
     {
       return new HelperDescriptor[] { new HelperDescriptor(typeof(MyHelper)) };
     }
  }

  Kudos to Fabio by coming up with the idea.

- ViewComponents: added subsection support

  (Using nvelocity as example)
  
  #blockcomponent(GridComponent)
    #header
      <th>Name</th>
    #end
    
    #footer
      Showing record $startrecord to $total
    #end
    
    #item
      <td>$item.Name</td>
    #end

    #empty
      <td>No records found</td>
    #end
  #end
  
  On the code you can use

	public override bool SupportsSection(String name)
	{
		return name == "header" || name == "item" || name == "footer" || 
			name == "empty";
	}

	public override void Render()
	{
		ICollection source = (ICollection) ComponentParams["source"];

		StartTable();

		Context.RenderSection("header");

		if (source != null && source.Count != 0)
		{
			foreach(object item in source)
			{
				PropertyBag["item"] = item;
				
				RenderText("<tr>");
				
				Context.RenderSection("item");
				