@@ -4,6 +4,8 @@ Change history
 Release Candidate 1
 ===================
 
+- Changed WizardStepPage.InternalRedirectToStep to simply RedirectToStep
+
 - Changed SmartDispatcherController.BuildMethodArguments. Now it tests if the conversion 
   succeeded before setting the value on the array.
 
